# Embedded_Lab

./: .clang-format  .clang-tidy  Environment setup.txt  PR description template.txt  PULL_REQUEST_TEMPLATE.md  README.md  README_template.md  test.cpp
.github/workflows/: test_pr.yml
docs/: PR description template.txt  README_template.md
source/app/FreeRTOS_WinSim/: WIN32.vcxproj  WIN32.vcxproj.filters
source/app/STM32F439ZI_LwIP_MQTT/: STM32F439ZI_LwIP_MQTT.code-workspace  STM32F439ZI_LwIP_MQTT.ioc  STM32F439ZI_LwIP_MQTT.launch
source/app/STM32F439ZI_LwIP_MQTT/Core/Inc/: stm32f4xx_it.h
source/app/STM32F439ZI_LwIP_MQTT/Core/Src/: freertos.cpp  gpio.c  main.cpp
source/app/STM32F439ZI_LwIP_MQTT/LWIP/App/: lwip.c
source/app/STM32F439ZI_LwIP_MQTT/app/: logger.cpp
source/app/STM32F439ZI_LwIP_MQTT/cmake/stm32cubemx/: CMakeLists.txt
source/app/STM32F439ZI_LwIP_TCPIP/: STM32F439ZI_LwIP_TCPIP.ioc
source/app/STM32F439ZI_LwIP_TCPIP/Core/Src/: freertos.c  freertos.cpp  main.c  main.cpp
source/app/STM32F439ZI_LwIP_TCPIP/LWIP/App/: lwip.c
source/app/STM32F439ZI_LwIP_TCPIP/app/: logger.cpp  serial_wifi.h
source/app/STM32F439ZI_LwIP_TCPIP/config/: config_cli.cpp  config_cli.h
source/app/STM32L432KC_Rust/: README.md
source/app/STM32L432KC_Rust/src/: cli.rs  main.rs
source/app/nRF54L15L/: CMakeLists.txt  README.md  prj.conf
source/app/nRF54L15L/boards/: nrf54l15dk_nrf54l10_cpuapp_ns.overlay
source/app/nRF54L15L/src/: Button.hpp  Led.hpp  Serial.cpp  Serial.hpp  main.cpp
source/app/nRF54L15L_BLE/: README.md
source/app/nRF54L15L_SPI/: CMakeLists.txt  README.md  prj.conf
source/app/nRF54L15L_SPI/boards/: nrf54l15dk_nrf54l15_cpuapp.overlay
source/app/nRF54L15L_SPI/src/: MemDefines.h  Spi.cpp  Spi.hpp  main.cpp
source/application/FreeRTOS_WinSim/: .gitignore  README.md
source/application/STM32F439ZI_LwIP_MQTT/: .mxproject  CMakeLists.txt  README.md  STM32F439ZITX_FLASH.ld  STM32F439ZI_LwIP_MQTT.ioc
source/application/STM32F439ZI_LwIP_MQTT/Core/Inc/: common.h  stm32f4xx_it.h
source/application/STM32F439ZI_LwIP_MQTT/Core/Src/: freertos.c  freertos.cpp  main.c  main.cpp  stm32f4xx_hal_msp.c  stm32f4xx_it.c  usart.c
source/application/STM32F439ZI_LwIP_MQTT/LWIP/App/: lwip.c  lwip.h
source/application/STM32F439ZI_LwIP_MQTT/app/: logger.cpp
source/application/STM32F439ZI_LwIP_MQTT/cmake/stm32cubemx/: CMakeLists.txt
source/application/STM32F439ZI_LwIP_MQTT/config/: config_cli.cpp  config_cli.h
source/application/STM32F439ZI_LwIP_MQTT/mqtt/: mqtt_client_port.c  mqtt_client_port.h  mqtt_manager_paho.cpp  mqtt_manager_paho.h
source/application/STM32F439ZI_LwIP_MQTT/wolfMQTT/: wolfSSL.I-CUBE-wolfMQTT_conf.h
source/application/STM32F439ZI_LwIP_TCPIP/: .mxproject  CMakeLists.txt  README.md  STM32F439ZI_LwIP_TCPIP.code-workspace  STM32F439ZI_LwIP_TCPIP.ioc
source/application/STM32F439ZI_LwIP_TCPIP/Core/Inc/: FreeRTOSConfig.h  common.h  main.h  stm32f4xx_it.h
source/application/STM32F439ZI_LwIP_TCPIP/Core/Src/: freertos.cpp  main.c  main.cpp  stm32f4xx_hal_msp.c  stm32f4xx_it.c  usart.c
source/application/STM32F439ZI_LwIP_TCPIP/LWIP/App/: lwip.c
source/application/STM32F439ZI_LwIP_TCPIP/app/: logger.cpp  logger.h  logging.cpp  logging.h  serial_wifi.cpp  serial_wifi.h
source/application/STM32F439ZI_LwIP_TCPIP/cmake/stm32cubemx/: CMakeLists.txt
source/application/STM32F439ZI_LwIP_TCPIP/config/: config_cli.cpp  config_cli.h  config_serial_device.cpp  config_serial_device.h  config_serial_wifi.cpp  config_serial_wifi.h
source/application/STM32L432KC_Rust/: README.md
source/application/STM32L432KC_Rust/src/: cli.rs  lib.rs  main.rs  stepper.rs
source/application/nRF54L15L/: prj.conf
source/common/: ErrorCodes.h  Utilities.h  error_codes.h
source/scripts/: echo_client_test.py  echo_server_test.py  esp8266_wifi_connection_test.py  tcpip_client_test.py
thirdparty_/FreeRTOS-Plus/Source/FreeRTOS-Cellular-Modules/bg96/source/: cellular_bg96.c  cellular_bg96.h  cellular_bg96_api.c  cellular_bg96_urc_handler.c
thirdparty_/FreeRTOS-Plus/Source/FreeRTOS-Cellular-Modules/hl7802/source/: cellular_hl7802_api.c
thirdparty_/FreeRTOS-Plus/Source/FreeRTOS-Cellular-Modules/sara-r4/source/: cellular_r4.h  cellular_r4_api.c
thirdparty_/FreeRTOS-Plus/Source/FreeRTOS-Plus-Trace/config/: trcConfig.h
thirdparty_/FreeRTOS/Demo/WIN32-MSVC/: WIN32.vcxproj  WIN32.vcxproj.filters
thirdparty_/FreeRTOS/Demo/WIN32-MSVC-Static-Allocation-Only/: WIN32.vcxproj
thirdparty_/FreeRTOS/Demo/WIN32-MSVC-Static-Allocation-Only/Debug/: RTOSDemo.exe.recipe  RTOSDemo.ilk  WIN32.vcxproj.FileListAbsolute.txt  vc143.idb
thirdparty_/FreeRTOS/Demo/WIN32-MSVC-Static-Allocation-Only/Debug/RTOSDemo.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  RTOSDemo.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
thirdparty_/FreeRTOS/Demo/WIN32-MSVC/x64/Debug/: RTOSDemo.exe.recipe  RTOSDemo.ilk  WIN32.vcxproj.FileListAbsolute.txt
thirdparty_/FreeRTOS/Demo/WIN32-MSVC/x64/Debug/RTOSDemo.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  RTOSDemo.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
unit_test/: .gitignore  CMakeLists.txt
unit_test/cli/: CMakeLists.txt  cli_tests.cpp
unit_test/message_passer/: CMakeLists.txt  FreeRTOSConfig.h  message_passer_test.cpp
unit_test/mocks/: mock_FreeRTOS.cpp  mock_FreeRTOS.h  mock_Lockable.h  mock_Semaphore.h  mock_freertos.cpp  mock_freertos.h  mock_lockable.h  mock_semaphore.h
unit_test/ring_buffer/: CMakeLists.txt  ring_buffer_test.cpp
unit_test/serial_device/: CMakeLists.txt  serial_device_tests.cpp
